--- a/src/index.html
+++ b/src/index.html
@@ -74,7 +74,6 @@
 									<div class="year-wrap none">
 										
 									</div>
-
 								</div>
 							</div>
 						</div>
@@ -105,7 +104,7 @@
 				<!-- off-canvas backdrop -->
 				<div class="mui-off-canvas-backdrop"></div>
 				<div class="go-bill">
-					<span class="mui-icon mui-icon-plus"</span>
+					<span class="mui-icon mui-icon-plus"></span>
 				</div>
 			</div>
 		</div>
